[gd_scene load_steps=2 format=3 uid="uid://qqr31gwogfkg"]

[ext_resource type="Script" path="res://Scenes/MainMenuUI/MainMenuUI.gd" id="1_4kj3h"]

[node name="MainMenuUI" type="Control" node_paths=PackedStringArray("name_input", "join_btn", "status_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4kj3h")
name_input = NodePath("MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/NameInput")
join_btn = NodePath("MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/JoinServerBtn")
status_label = NodePath("MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/StatusLabel")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.960784, 0.619608, 0.780392, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 140
text = "Pali"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/separation = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Name"

[node name="NameInput" type="LineEdit" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "ABCD"
placeholder_text = "John Wick..."

[node name="JoinServerBtn" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Join Server"

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Loading..."

[node name="CreateServerBtn" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Create Server (debug only)"

[node name="FooterLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_font_sizes/font_size = 32
text = "Pali - A Game by Jason Rametta"
horizontal_alignment = 1

[connection signal="text_changed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/NameInput" to="." method="_on_name_input_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/JoinServerBtn" to="." method="_on_join_server_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/CreateServerBtn" to="." method="_on_create_server_btn_pressed"]
